Updated modal sheet to have fixed height so that scrollbars would work, (in Database Browser)

--- a/DB-Browser/src/styles.css
+++ b/DB-Browser/src/styles.css
@@ -77,14 +77,12 @@ strong {
     margin-bottom: 10px;
     border: 2px solid var(--primary);
     display: none;
+    height: 95vh;
+    overflow: auto;
 }
 
 #modalViewer > #content {
     background-color: var(--light);
-}
-
-.accordian-content-panel {
-    overflow: auto;
 }
 
 #editProgramForm {
